fix fallback logic for previous round counts tie-breaking modes